# slip

./: CMakeLists.txt  README.md  slip.c  slip.h  stack.c  stack.h
examples/: fibonacci.slip  for_loop.slip  hello_world.slip  int_test.slip  pop_test.slip
src/: error_handling.c  error_handling.h  instructions.c  instructions.h  parser.c  parser.h  slip.c  slip.h  stack.c  stack.h  unified_io.c  unified_io.h
tests/: instruction_tests.c  io_tests.c  stack_tests.c
